--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,23 @@
   font-family: Archia SemiBold;
   src: url("../assets/fonts/archia-semibold-webfont.woff");
 }
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.content { padding: 30px 30px 30px 30px;}
+
+
+.menubar {
+  height: 20px;
+  width: 140px;
+  background-color: #6102FA;
+  float: right;
+  margin: 30px 30px 0px 0px;
+}
+
+.intro {
+  height: 100vh;
+}
