--- a/css/cv.css
+++ b/css/cv.css
@@ -1,3 +1,46 @@
 body {
-  background-color: #FFF;
+  background-color: #6102FA;
+}
+
+.menubar {
+background-color: #FFF;
+}
+
+.about {
+  padding: 200px 100px 30px 50px;
+}
+
+h3 {
+  color: #FADD02;
+  font-size: 50pt;
+  padding-bottom: 100px;
+}
+
+.button {
+  width: 250px;
+  height: 145px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #FADD02;
+  float: left;
+  margin: 0px 20px 50px 0px;
+  padding: 10px;
+}
+
+.button p {
+  color: #FFF;
+  font-family: Archia SemiBold;
+  font-size: 30pt;
+  text-align: right;
+}
+
+.footnote {
+  clear: both;
+  color: #FFF;
+  font-family: Archia Light;
+  font-size: 9pt;
+}
+
+span {
+  font-family: Archia SemiBold;
 }
