--- a/css/intro.css
+++ b/css/intro.css
@@ -1,3 +1,15 @@
 .menubar {
 background-color: #6102FA;
 }
+
+.intro {
+  height: 100vh;
+}
+
+p {
+  font-family: Archia SemiBold;
+  font-size: 70pt;
+  padding-left: 100px;
+  color: #FADD02;
+  top: 50%;
+}
