--- a/css/cv.css
+++ b/css/cv.css
@@ -11,6 +11,7 @@ background-color: #FFF;
 }
 
 h3 {
+  font-family: Archia SemiBold;
   color: #FADD02;
   font-size: 50pt;
   padding-bottom: 100px;
