--- a/css/horizontalscroll.css
+++ b/css/horizontalscroll.css
@@ -1,35 +1,46 @@
 /*   CONTAINERS   */
+
+/*MOBILE*/
 #container .box {
-  width:100vw;
-  height:100vh;
-  display:inline-block;
-  position:relative;
-  border: 70px solid white;
+  width:80vw;
+  height:30vh;
+  display: block;
+  border: 0px solid white;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
+/*MOBILE*/
 #container .cover + div {
   color:#FFF;
+  padding: 10% 10% 10% 10%;
+}
+
+#container .box > div {
+  width:80vw;
+  height:30vh;
+  z-index: 4;
   position: absolute;
-  top:40%;
-  left:30%;
-  z-index: 3;
 }
 
+/*MOBILE*/
 #container {
-  overflow-y:scroll;
-  overflow-x:hidden;
-  transform: rotate(270deg) translateX(-100%);
+  overflow-y: hidden;
+  overflow-x: hidden;
+  transform: none;
   transform-origin: top left;
-  position:absolute;
-  width:100vh;
-  height:100vw;
+  width:100vw;
+  height: auto;
 }
 
+/*MOBILE*/
 #containerscroll {
-  transform: rotate(90deg) translateY(-100vh);
+  transform: none;
   transform-origin: top left;
   white-space:nowrap;
+  margin: auto;
 }
+
 
 
 /*  BOXES   */
@@ -59,12 +70,58 @@
 
 
 /*   BOX-STYLE   */
+/*MOBILE*/
 .box h3 {
   font-family: Archia SemiBold;
-  font-size: 30pt;
+  font-size: 14pt;
 }
 
+/*MOBILE*/
 .box h2 {
   font-family: Archia SemiBold;
-  font-size: 70pt;
+  font-size: 25pt;
+}
+
+
+
+/* MEDIAQUERIES */
+@media only screen and (min-width: 678px) {
+  #container .box {
+    width:100vw;
+    height:100vh;
+    display:inline-block;
+    border: 70px solid white;
+    margin: 0 ;
+    margin-bottom: 0px;
+  }
+
+  #container .cover + div {
+    color:#FFF;
+    padding: 10% 10% 10% 10%;
+    z-index: 3;
+  }
+
+  #container {
+    overflow-y:scroll;
+    overflow-x:hidden;
+    transform: rotate(270deg) translateX(-100%);
+    transform-origin: top left;
+    width:100vh;
+    height:100vw;
+  }
+
+  #containerscroll {
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+    white-space:nowrap;
+    margin: 0;
+  }
+
+  .box h3 {
+    font-size: 30pt;
+  }
+
+  .box h2 {
+    font-size: 70pt;
+  }
 }
