--- a/css/intro.css
+++ b/css/intro.css
@@ -8,8 +8,15 @@ background-color: #6102FA;
 
 p {
   font-family: Archia SemiBold;
-  font-size: 70pt;
-  padding-left: 100px;
+  font-size: 50pt;
   color: #FADD02;
-  top: 50%;
+  padding: 50% 0% 0% 30%;
+}
+
+/*MEDIAQUERIES*/
+@media only screen and (min-width: 678px) {
+  p {
+    font-size: 70pt;
+    padding: 0px 0px 0px 100px;
+  }
 }
