--- a/css/projects.css
+++ b/css/projects.css
@@ -6,36 +6,42 @@
   border: 5px solid #FADD02;
 }
 
+/* MOBILE*/
 .left {
-  padding: 100px 10px 200px 100px;
-  float: left;
-  width: 40%;
-  display: inline-block;
+  padding: 30% 2% 10% 5%;
+  float: none;
+  width: auto;
+  display: block;
 }
 
+/* MOBILE*/
 .right {
-  width: 60%;
-  display: inline-block;
-  padding: 300px 50px 0px 0px;
+  width: 100%;
+  display: block;
+  padding: 2% 2% 10% 5%;
 }
 
 /* STYLES */
+
+/* MOBILE*/
 h3 {
   font-family: Archia SemiBold;
-  font-size: 30pt;
+  font-size: 20pt;
   color: #FADD02;
 }
 
+/* MOBILE*/
 h2 {
   font-family: Archia SemiBold;
-  font-size: 60pt;
+  font-size: 50pt;
   line-height: 1;
   color: #A5A5A5;
 }
 
+/* MOBILE*/
 h1 {
   font-family: Archia Light;
-  font-size: 30pt;
+  font-size: 25pt;
   line-height: 1.2;
   color: #A5A5A5;
 }
@@ -55,14 +61,17 @@ p {
 
 
 /*  PROJECT   */
+
+/* MOBILE*/
 .project {
   clear: both;
   background-color: #F2F2F2;
-  padding: 100px;
+  padding: 20px;
 }
 
+/* MOBILE*/
 .project > img {
-  padding-top: 70px;
+  padding-top: 30px;
   border-radius: 1%;
   backgroundcolor: #F2F2F2;
   display: block;
@@ -72,18 +81,22 @@ p {
 
 
 /* NEXT PROJECT  */
+
+/* MOBILE*/
 .next {
-  height: 60vh;
-  padding: 70px 30px 0px 100px;
+  height: 40vh;
+  padding: 10% 5% 10% 5%;
   display: flex;
   justify-content: space-between;
 }
 
+/* MOBILE*/
 .next div:first-child {
-  width: 300px;
-  height: 200px;
+  width: 200px;
+  height: 130px;
   border: 5px solid #FADD02;
 }
+
 
 .next div:first-child > h3 {
   color: #6102FA;
@@ -99,16 +112,18 @@ p {
 
 
 /*  FOOTER  */
+
+/* MOBILE*/
 .footer {
-  height: 60vh;
   background-color: #6102FA;
-  display: flex;
-  justify-content: space-between;
+  display: block;
+  justify-content: flex-end;
 }
 
+/* MOBILE*/
 .footer > div {
-  width: 500px;
-  padding: 20px;
+  width: 100%;
+  padding: 1% 2% 15% 5%;
 }
 
 .footer > div > h3 {
@@ -137,18 +152,84 @@ p {
 }
 
 
-/*Ab 1220px wird die Info oben 1-spaltig*/
-@media only screen and (max-width: 1220px) {
+@media only screen and (min-width: 678px) {
   .left {
-    padding: 100px 10px 100px 100px;
-    float: none;
-    width: 70%;
-    display: block;
+    padding: 100px 10px 200px 100px;
+    float: left;
+    width: 40%;
+    display: inline-block;
   }
 
   .right {
+    width: 60%;
+    display: inline-block;
+    padding: 300px 50px 0px 0px;
+  }
+
+  h3 {
+    font-size: 30pt;
+  }
+
+  h2 {
+    font-size: 60pt;
+  }
+
+  h1 {
+    font-size: 30pt;
+  }
+
+  .project {
+    padding: 100px;
+  }
+
+  .project > img {
+    padding-top: 70px;
+  }
+
+  .next {
+    height: 60vh;
+    padding: 70px 30px 0px 100px;
+  }
+
+  .next div:first-child {
+    width: 300px;
+    height: 200px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer > div {
+    width: 500px;
+    padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 1220px) {
+  .left {
+    padding: 10% 2% 2% 5%;
+    float: none;
+    width: auto;
+    display: block;
+  }
+
+  /* MOBILE*/
+  .right {
     width: 100%;
     display: block;
-    padding: 0px 100px 50px 100px;
+    padding: 5% 2% 10% 5%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .footer {
+    display: block;
+    justify-content: space-between;
+  }
+  
+  h3 {
+    font-size: 30pt;
   }
 }
