--- a/css/intro.css
+++ b/css/intro.css
@@ -10,7 +10,7 @@ p {
   font-family: Archia SemiBold;
   font-size: 50pt;
   color: #FADD02;
-  padding: 50% 0% 0% 30%;
+  padding: 200px 0px 0px 100px;
 }
 
 /*MEDIAQUERIES*/
