--- a/css/horizontalscroll.css
+++ b/css/horizontalscroll.css
@@ -1,28 +1,4 @@
 /*   CONTAINERS   */
-
-/*MOBILE*/
-#container .box {
-  width:80vw;
-  height:30vh;
-  display: block;
-  border: 0px solid white;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-
-/*MOBILE*/
-#container .cover + div {
-  color:#FFF;
-  padding: 30px;
-}
-
-#container .box > div {
-  width:80vw;
-  height:30vh;
-  z-index: 4;
-  position: absolute;
-}
-
 /*MOBILE*/
 #container {
   overflow-y: hidden;
@@ -41,43 +17,79 @@
   margin: auto;
 }
 
+.boxwrapper{
+  position:relative;
+  width:100vw;
+  height:100vh;
+  display:inline-block;
+  margin: 0 ;
+  margin-bottom: 0px;
+  padding:100px;
+}
+
+/*!!!*/
+#container .box {
+  width:80vw;
+  height:30vh;
+  display: block;
+  border: 0px solid white;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+/*!!!!*/
+#container .box > div {
+  width:80vw;
+  height:30vh;
+  z-index: 4;
+  position: absolute;
+}
+
+.cover, .box, .info{ position:absolute; }
+
+.info{
+  z-index:10;
+  padding: 50px;
+  color: white;
+  white-space: pre-wrap;
+}
 
 
 /*  BOXES   */
 .yellow {
   background-color: #FADD02;
-  opacity: 0.5;
+  opacity: 0.8;
 }
+
 .violet {
   background-color: #6102FA;
-  opacity: 0.5;
+  opacity: 0.8;
   z-index: 2;
 }
 
 
 /*   CoVER   */
 .cover {
-  width:100%;
-  height:100%;
+  width:calc(100% - 200px);
+  height:calc(100% - 200px);
   background-size: cover;
   z-index: 1;
 }
 
-.one {
-  background-image: url("../assets/covers/ref-cover.png");
-
- }
+.one { background-image: url("../assets/covers/ref-cover.png"); }
+.two { background-image: url("../assets/covers/bees-cover.jpg"); }
+.three { background-image: url("../assets/covers/faden-cover.jpg"); }
 
 
 /*   BOX-STYLE   */
 /*MOBILE*/
-.box h3 {
+.info h3 {
   font-family: Archia SemiBold;
   font-size: 14pt;
 }
 
 /*MOBILE*/
-.box h2 {
+.info h2 {
   font-family: Archia SemiBold;
   font-size: 25pt;
 }
@@ -87,17 +99,15 @@
 /* MEDIAQUERIES */
 @media only screen and (min-width: 678px) {
   #container .box {
-    width:100vw;
-    height:100vh;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
     display:inline-block;
-    border: 70px solid white;
     margin: 0 ;
     margin-bottom: 0px;
   }
 
   #container .cover + div {
     color:#FFF;
-    padding: 100px;;
     z-index: 3;
   }
 
@@ -117,11 +127,7 @@
     margin: 0;
   }
 
-  .box h3 {
-    font-size: 30pt;
-  }
+  .info h3 { font-size: 30pt; }
 
-  .box h2 {
-    font-size: 70pt;
-  }
+  .info h2 { font-size: 70pt; }
 }
