--- a/css/projects.css
+++ b/css/projects.css
@@ -153,14 +153,14 @@ p {
   line-height: 1.4;
 }
 
-.footer > div > p:nth-child(3) { font-family: Archia SemiBold; }
+/*.footer > div > p:nth-child(3) { font-family: Archia SemiBold; }*/
 
 .footer > div > div { display: flex; }
 
 .footer > div > div > img {
-  height: 40px;
+  height: 25px;
   margin: 30px 0px 20px 0px;
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 
