--- a/css/intro.css
+++ b/css/intro.css
@@ -1,9 +1,29 @@
 .menubar {
 background-color: #6102FA;
+animation: menu 5s;
+}
+
+@keyframes menu {
+  width: 100%;
+  height: 100%;
 }
 
 .intro {
   height: 100vh;
+}
+
+.intro h3 {
+  font-family: Archia SemiBold;
+  color: #A5A5A5;
+  /*#F7F5F5;*/
+}
+
+#scroll {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  right: 50%;
+  padding-bottom: 50px;
 }
 
 p {
@@ -17,6 +37,5 @@ p {
 @media only screen and (min-width: 678px) {
   p {
     font-size: 70pt;
-    padding: 0px 0px 0px 100px;
   }
 }
