--- a/css/intro.css
+++ b/css/intro.css
@@ -1,10 +1,10 @@
-.menubar {
+#menubar {
 background-color: #6102FA;
 animation: menu 5s;
 }
 
 @keyframes menu {
-  width: 100%;
+  top: 0;
   height: 100%;
 }
 
