--- a/css/projects.css
+++ b/css/projects.css
@@ -1,8 +1,8 @@
-.menubar {
+#menubar {
   background-color: #6102FA;
 }
 
-.menucircle {
+#menucircle {
   border: 5px solid #FADD02;
 }
 
@@ -25,12 +25,15 @@
   margin-bottom: 40px;
 }
 
+.right a {
+  width: auto;
+}
+
 a {
   font-family: Archia SemiBold;
   font-size: 13pt;
   color: #6102FA;
   text-decoration: none;
-position: relative;
 }
 
 
@@ -122,7 +125,6 @@ p {
 
 
 /*  FOOTER  */
-
 /* MOBILE*/
 .footer {
   background-color: #6102FA;
@@ -130,33 +132,25 @@ p {
   justify-content: flex-end;
 }
 
-/* MOBILE*/
 
-
-.footer > div > a {
-  width: 100%;
-  padding: 10px 20px 10px 20px;
-}
-
-.footer > div > a {
-  color: #FADD02;
-  font-family: Archia SemiBold;
-}
-
-.footer > div > p {
+.footer  p {
   color: #FADD02;
   padding-top: 20px;
   line-height: 1.4;
 }
 
-/*.footer > div > p:nth-child(3) { font-family: Archia SemiBold; }*/
+.footer a {
+  position: relative;
+  color: #FADD02;
+  font-family: Archia SemiBold;
+}
 
-.footer > div > div { display: flex; }
 
-.footer > div > div > img {
-  height: 40px;
+.footer a > img {
+  height: 25px;
   margin: 30px 0px 20px 0px;
   padding-right: 15px;
+  color: black;
 }
 
 
@@ -210,7 +204,6 @@ p {
     width: auto;
     display: block;
   }
-
 
   .right {
     width: 100%;
