--- a/css/intro.css
+++ b/css/intro.css
@@ -1,11 +1,15 @@
 #menubar {
 background-color: #6102FA;
-animation: menu 5s;
 }
 
-@keyframes menu {
-  top: 0;
-  height: 100%;
+#menubarActive {
+background-color: #6102FA;
+transition:all 1s ease;
+width: 100%;
+height: 100%;
+top: 0;
+right: 0;
+position: fixed;
 }
 
 .intro {
