--- a/css/projects.css
+++ b/css/projects.css
@@ -145,11 +145,15 @@ p {
   font-family: Archia SemiBold;
 }
 
+.footer > div {
+  padding: 15px;
+}
+
 
 .footer a > img {
-  height: 25px;
+  height: 30px;
   margin: 30px 0px 20px 0px;
-  padding-right: 15px;
+  padding-right: 8px;
   color: black;
 }
 
@@ -193,8 +197,11 @@ p {
 
   .footer > div {
     width: 500px;
-    padding: 20px;
   }
+}
+
+.footer > div:nth-child(3), .footer > div:nth-child(4) {
+  padding-top: 15px;
 }
 
 @media only screen and (min-width: 560px) {
