--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,12 @@
+body {
+  opacity: 0;
+  -webkit-transition: opacity 1s ease-in;
+  -moz-transition: opacity 1s ease-in;
+  -o-transition: opacity 1s ease-in;
+  -ms-transition: opacity 1s ease-in;
+  transition: opacity 1s ease-in;
+}
+
 #menubar {
   background-color: #6102FA;
 }
