--- a/css/intro.css
+++ b/css/intro.css
@@ -14,8 +14,8 @@ body {
 #menubarActive {
   background-color: #6102FA;
   transition: all 1s ease;
-  width: 100%;
-  height: 100%;
+  width: 2000px;
+  height: 2000px;
   top: 0;
   right: 0;
   position: fixed;
@@ -37,6 +37,7 @@ body {
   left: 50%;
   right: 50%;
   padding-bottom: 50px;
+  z-index: -1;
 }
 
 p {
@@ -45,6 +46,7 @@ p {
   color: #A5A5A5;
   padding: 200px 0px 0px 100px;
   position: absolute;
+  z-index: -1;
 }
 
 
