--- a/css/projects.css
+++ b/css/projects.css
@@ -9,9 +9,7 @@
   transition: opacity 1s ease-in;
 }
 
-#menubar {
-  background-color: #6102FA;
-}
+#menubar { background-color: #6102FA; }
 
 #menubarActive {
   background-color: #6102FA;
@@ -70,6 +68,7 @@ a {
   text-decoration: none;
 }
 
+
 /* STYLES */
 h3 {
   font-family: Archia SemiBold;
@@ -91,18 +90,15 @@ h1 {
   color: #A5A5A5;
 }
 
-p {
-  font-family: Archia Light;
-}
+p { font-family: Archia Light; }
 
-.bold {
-  font-family: Archia SemiBold;
-}
+.bold { font-family: Archia SemiBold; }
 
 .facts {
   margin-top: 30px;
   color: #A5A5A5;
 }
+
 
 /*  PROJECT   */
 .project {
@@ -148,8 +144,9 @@ p {
 /*  FOOTER  */
 .footer {
   background-color: #6102FA;
-  display: block;
-  justify-content: flex-end;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
 }
 
 .footer a {
@@ -158,12 +155,9 @@ p {
   font-family: Archia SemiBold;
 }
 
-.footer>div {
-  padding: 15px;
-}
-
+/*ICONS*/
 .footer a>img {
-  height: 30px;
+  height: 40px;
   margin: 30px 0px 20px 0px;
   padding-right: 8px;
 }
@@ -189,6 +183,7 @@ p {
   content: 'email me';
   color: #3D00B2;
 }
+
 
 
 /*MEDIA QUERIES*/
@@ -224,11 +219,6 @@ p {
   }
 
   .next h3 { font-size: 30pt; } 
-
-  .footer {
-    display: flex;
-    justify-content: space-between;
-  }
 }
 
 @media only screen and (min-width: 560px) {
@@ -246,9 +236,6 @@ p {
   }
 }
 
-@media only screen and (max-width: 678px) {
-  .footer {
-    display: block;
-    justify-content: space-between;
-  }
+@media only screen and (max-width: 375px) {
+  .footer { display: block; }
 }
