--- a/css/intro.css
+++ b/css/intro.css
@@ -33,10 +33,9 @@ body {
 
 #scroll {
   position: absolute;
-  bottom: 0;
-  left: 50%;
-  right: 50%;
-  padding-bottom: 50px;
+  bottom: 50px;
+  width: 100%;
+  text-align: center;
   z-index: -1;
 }
 
@@ -44,36 +43,99 @@ p {
   font-family: Archia SemiBold;
   font-size: 50pt;
   color: #A5A5A5;
-  padding: 200px 0px 0px 100px;
+  top: 30%;
+  width: 100%;
+  text-align: center;
   position: absolute;
   z-index: -1;
 }
 
 
 /* INTRO ANIMATION */
-#animation {
+#animation { /*rotation*/
   z-index: -2;
   position: relative;
-  display: flex;
-  animation-name: spin;
-  animation-duration: 5s;
+  animation-name: infinite-rotation;
+  animation-duration: 100s;
   animation-delay: 2s;
-  animation-iteration-count: infinite;
+  width: 100vw;
+  transform-origin: 50% -10%;
+
 }
 
-@keyframes spin { 
-  from { 
-      transform: rotate(0deg); 
-  } to { 
-      transform: rotate(360deg); 
+#animation > div {
+  /*transform: translateY(-170%);*/
+}
+
+#animation svg {
+  animation: smallcircle 1s ease-in-out alternate;
+
+}
+
+
+#bubble1 {
+  /*margin-bottom: 80%;
+  padding: 20px;*/
+}
+
+#bubble2 {
+  /*margin-bottom: 70%;
+  padding: 50px;*/
+}
+
+#bubble3 {
+  /*margin-bottom: 50%;
+  padding: 50px;*/
+}
+
+#bubble4 {
+  /*margin-bottom: 20%;
+  padding: 10px;*/
+}
+
+#bubble5 {
+  /*margin-bottom: 30%;
+  padding: 10px;*/
+}
+
+#bubble6 {
+  /*margin-bottom: 50%;
+  padding: 10px;*/
+}
+
+
+/* KEYFRAMES */
+@keyframes smallcircle {
+  0% {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    transform: scale(0);
+  }
+  
+  100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
   }
 }
+
+@keyframes infinite-rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
 
 
 /*MEDIAQUERIES*/
-@media only screen and (min-width: 678px) {
+@media only screen and (max-width: 500px) {
   p {
-    font-size: 50pt;
+    font-size: 35pt;
   }
 }
