--- a/css/intro.css
+++ b/css/intro.css
@@ -1,11 +1,12 @@
-body {
+/*body {
   opacity: 0;
   -webkit-transition: opacity 1s ease-in;
   -moz-transition: opacity 1s ease-in;
   -o-transition: opacity 1s ease-in;
   -ms-transition: opacity 1s ease-in;
   transition: opacity 1s ease-in;
-}
+}*/
+/*not necessary because of introanim*/
 
 #menubar {
   background-color: #6102FA;
@@ -19,6 +20,7 @@ body {
   top: 0;
   right: 0;
   position: fixed;
+  z-index: 10;
 }
 
 .intro {
@@ -37,59 +39,22 @@ body {
   width: 100%;
   text-align: center;
   z-index: -1;
+  /*transition-delay: 5s;*/ /*SetTimeOut in JS*/
+}
+
+#scroll h3 {
+  color: white;
 }
 
 p {
   font-family: Archia SemiBold;
   font-size: 50pt;
-  color: #A5A5A5;
+  color: white; /*#A5A5A5*/
   top: 30%;
   width: 100%;
   text-align: center;
   position: absolute;
   z-index: -1;
-}
-
-
-/* INTRO ANIMATION */
-#animation { /*rotation*/
-  z-index: -2;
-  position: relative;
-  animation-name: infinite-rotation;
-  animation-duration: 100s;
-  animation-delay: 2s;
-  width: 100vw;
-  transform-origin: 50% -10%;
-
-}
-
-
-/* KEYFRAMES */
-@keyframes smallcircle {
-  0% {
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    transform: scale(0);
-  }
-  
-  100% {
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    transform: scale(1);
-  }
-}
-
-@keyframes infinite-rotation {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
 }
 
 
