--- a/plugins/fullpage.css
+++ b/plugins/fullpage.css
@@ -22,17 +22,24 @@ html.fp-enabled,
     -webkit-box-sizing: border-box; /* Safari<=5 Android<=3 */
     -moz-box-sizing: border-box; /* <=28 */
     box-sizing: border-box;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
 .fp-slide {
     float: left;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
 .fp-slide, .fp-slidesContainer {
     height: 100%;
     display: block;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
 .fp-slides {
     z-index:1;
-    height: 100%;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
     overflow: hidden;
     position: relative;
     -webkit-transition: all 0.3s ease-out; /* Safari<=6 Android<=4.3 */
@@ -40,24 +47,25 @@ html.fp-enabled,
 }
 .fp-section.fp-table, .fp-slide.fp-table {
     /*display: table;
-    table-layout:fixed;
-    width: 100%;*/
+    table-layout:fixed;*/
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
 .fp-tableCell {
-    display: table-cell;
+    /*display: table-cell;*/
     vertical-align: middle;
-    width: 100%;
-    height: 100%;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
 .fp-slidesContainer {
     float: left;
     position: relative;
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
 }
-.fp-controlArrow {
-    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
-    -moz-user-select: none; /* mozilla browsers */
-    -khtml-user-select: none; /* webkit (konqueror) browsers */
-    -ms-user-select: none; /* IE10+ */
+
+/*.fp-controlArrow {
+
     position: absolute;
     z-index: 4;
     top: 50%;
@@ -81,8 +89,10 @@ html.fp-enabled,
     border-width: 38.5px 0 38.5px 34px;
     border-color: transparent transparent transparent #fff;
 }
+*/
+
 .fp-scrollable {
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
 }
 .fp-scroller{
@@ -95,6 +105,8 @@ html.fp-enabled,
     -webkit-transition: none !important;
     transition: none !important;
 }
+
+/*
 #fp-nav {
     position: fixed;
     z-index: 100;
@@ -198,6 +210,7 @@ html.fp-enabled,
     width: 0;
     cursor: pointer;
 }
+
 #fp-nav ul li:hover .fp-tooltip,
 #fp-nav.fp-show-active a.active + .fp-tooltip {
     -webkit-transition: opacity 0.2s ease-in;
@@ -210,21 +223,22 @@ html.fp-enabled,
 }
 #fp-nav ul li .fp-tooltip.fp-left {
     left: 20px;
-}
+}*/
 .fp-auto-height.fp-section,
 .fp-auto-height .fp-slide,
 .fp-auto-height .fp-tableCell{
-    height: auto !important;
+    /*height: auto !important;*/
 }
 
 .fp-responsive .fp-auto-height-responsive.fp-section,
 .fp-responsive .fp-auto-height-responsive .fp-slide,
 .fp-responsive .fp-auto-height-responsive .fp-tableCell {
-    height: auto !important;
+    /*height: auto !important;*/
 }
 
+
 /*Only display content to screen readers*/
-.fp-sr-only{
+/*.fp-sr-only{
     position: absolute;
     width: 1px;
     height: 1px;
@@ -233,4 +247,4 @@ html.fp-enabled,
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
-}
+}*/
