--- a/css/horizontalscroll.css
+++ b/css/horizontalscroll.css
@@ -1,3 +1,6 @@
+/* MOBILE FIRST BITCHEEES */
+
+
 /*   CONTAINERS   */
 #container {
   overflow-y: hidden;
@@ -10,49 +13,48 @@
   position:absolute;
 }
 
-/*MOBILE*/
 #containerscroll {
   transform: none;
   transform-origin: top left;
-  white-space:nowrap;
+  white-space: nowrap;
   margin: auto;
 }
 
 .boxwrapper{
   position:relative;
   width:100vw;
-  height:100vh;
-  display:inline-block;
+  height:40vh;
+  display:flex;
   margin: 0 ;
   margin-bottom: 0px;
-  padding:100px;
+  padding:20px;
 }
 
-/*!!!*/
 #container .box {
-  width:80vw;
-  height:30vh;
+  width:calc(100% - 40px);
+  height:calc(100% - 40px);
   display: block;
-  border: 0px solid white;
   margin: 0 auto;
   margin-bottom: 30px;
+
 }
 
-/*!!!!*/
 #container .box > div {
-  width:80vw;
-  height:30vh;
+  width:calc(100% - 40px);
+  height:calc(100% - 40px);
   z-index: 4;
   position: absolute;
 }
 
 .cover, .box, .info { position:absolute; }
 
-.info{
+.info {
   z-index:10;
-  padding: 50px;
+  padding: 20px 50px 50px 50px;
   color: white;
   white-space: pre-wrap;
+  width:calc(100% - 100px);
+  height:calc(100% - 100px);
 }
 
 
@@ -60,6 +62,7 @@
 .yellow {
   background-color: #FADD02;
   opacity: 0.8;
+  z-index: 2;
 }
 
 .violet {
@@ -71,8 +74,8 @@
 
 /*   CoVER   */
 .cover {
-  width:calc(100% - 200px);
-  height:calc(100% - 200px);
+  width:calc(100% - 40px);
+  height:calc(100% - 40px);
   background-size: cover;
   z-index: 1;
 }
@@ -86,13 +89,13 @@
 /*MOBILE*/
 .info h3 {
   font-family: Archia SemiBold;
-  font-size: 14pt;
+  font-size: 16pt;
 }
 
 /*MOBILE*/
 .info h2 {
   font-family: Archia SemiBold;
-  font-size: 25pt;
+  font-size: 30pt;
 }
 
 
@@ -107,9 +110,16 @@
     margin-bottom: 0px;
   }
 
-  .info {
+  #container .box > div {
     width:calc(100% - 200px);
     height:calc(100% - 200px);
+    z-index: 4;
+    position: absolute;
+  }
+
+  .info {
+    width:calc(100% - 300px);
+    height:calc(100% - 300px);
   }
 
   #container .cover + div {
@@ -127,10 +137,28 @@
   }
 
   #containerscroll {
+    width:100vw;
+    height:100vh;
     transform: rotate(90deg) translateY(-100vh);
     transform-origin: top left;
     white-space:nowrap;
     margin: 0;
+  }
+
+  .boxwrapper {
+    width:100vw;
+    height:100vh;
+    display:inline-block;
+    margin: 0 ;
+    margin-bottom: 0px;
+    padding:100px;
+    }
+
+  .cover {
+    width:calc(100% - 200px);
+    height:calc(100% - 200px);
+    background-size: cover;
+    z-index: 1;
   }
 
   .info h3 { font-size: 30pt; }
