--- a/css/projects.css
+++ b/css/projects.css
@@ -22,21 +22,21 @@
 }
 
 #menucircle {
-  border: 5px solid #FADD02;
+  border: 4px solid #FADD02;
+  background-color: rgba(0,0,0,0);
   transform: scale(1.0);
 }
 
 #menucircleActive {
-  border: 10px solid #FADD02;
   background-color: #FFF;
-  border-radius: 100%;
-  transition: all 1s ease-in-out;
-  width: 150%;
-  height: 150%;
+  border: 1px solid #FADD02;
+  width: 200%;
+  height: 200%;
   position: fixed;
-  transform: scale(100);
+  transform: scale(100, 120);
   top: 50%;
   right: 50%;
+  transition: all 3.5s ease-in-out, background-color 1s ease;
 }
 
 .left {
