--- a/css/projects.css
+++ b/css/projects.css
@@ -19,12 +19,14 @@
   top: 0;
   right: 0;
   position: fixed;
+  z-index: 10;
 }
 
 #menucircle {
   border: 4px solid #FADD02;
   background-color: rgba(0,0,0,0);
   transform: scale(1.0);
+  z-index: 5;
 }
 
 #menucircleActive {
