--- a/css/cv.css
+++ b/css/cv.css
@@ -1,3 +1,5 @@
+/* MOBILE FIRST BITCHES */
+
 body {
   background-color: #6102FA;
   z-index: 4;
@@ -12,6 +14,11 @@ body {
 
 #menubar {
 background-color: #FFF;
+transition: transform ease 0.5s;
+}
+
+#menubar:hover {
+  transform: scale(1.1);
 }
 
 #menubarActive {
@@ -24,12 +31,10 @@ right: 0;
 position: fixed;
 }
 
-/* MOBILE*/
 .about {
   padding: 70px 30px 30px 50px;
 }
 
-/* MOBILE*/
 h3 {
   font-family: Archia SemiBold;
   color: #FADD02;
@@ -75,17 +80,54 @@ span {
     padding: 200px 100px 30px 50px;
   }
 
-  h3 {
-    font-size: 50pt;
-    padding-bottom: 100px;
-  }
+h3 {
+  font-size: 50pt;
+  padding-bottom: 100px;
+}
 
-  .button {
-    width: 250px;
-    height: 145px;
-    float: left;
-    margin: 0px 20px 50px 0px;
-  }
+.button {
+  width: 250px;
+  height: 145px;
+  float: left;
+  margin: 0px 20px 50px 0px;
+}
+
+  /* BORDER-TRANSITION FOR THE BOX */
+.button::after, .button::before {
+  content: "";
+  height: calc(100% + 5px);
+  width: calc(100% + 5px);;
+  /*left: -5px;*/
+  position: absolute;
+  /*top: -5px;*/
+  transform: scale(0);
+  transition: all 0.5s ease-in-out 0s;
+  z-index: 3;
+}
+
+.button a {
+  z-index: 4;
+}
+
+.button::before {
+  border-bottom: 5px solid white;
+  border-left: 5px solid white;
+  transform-origin: 0 100% 0;
+}
+
+.button::after {
+  border-right: 5px solid white;
+  border-top: 5px solid white;
+  transform-origin: 100% 0 0;
+}
+
+.button:hover::after, .button:hover::before {
+  transform: scale(1);
+}
+.button:hover {
+  border: 5px solid rgba(0, 160, 80, 0);
+}
+
 
   .button p {
     font-size: 30pt;
