--- a/css/cv.css
+++ b/css/cv.css
@@ -94,9 +94,9 @@ h3 {
 
   /* BORDER-TRANSITION FOR THE BOX */
 .button::after, .button::before {
-  content: "";
-  height: calc(100% + 5px);
-  width: calc(100% + 5px);;
+  /*content: "";*/
+  height: 100%;
+  width: 100%;
   /*left: -5px;*/
   position: absolute;
   /*top: -5px;*/
@@ -112,13 +112,13 @@ h3 {
 .button::before {
   border-bottom: 5px solid white;
   border-left: 5px solid white;
-  transform-origin: 0 100% 0;
+  /*transform-origin: 0 100% 0;*/
 }
 
 .button::after {
   border-right: 5px solid white;
   border-top: 5px solid white;
-  transform-origin: 100% 0 0;
+  /*transform-origin: 100% 0 0;*/
 }
 
 .button:hover::after, .button:hover::before {
@@ -127,13 +127,13 @@ h3 {
 .button:hover {
   border: 5px solid rgba(0, 160, 80, 0);
 }
+/*---*/
 
+.button p {
+  font-size: 30pt;
+}
 
-  .button p {
-    font-size: 30pt;
-  }
-
-  .footnote {
-    font-size: 9pt;
+.footnote {
+  font-size: 9pt;
   }
 }
