added icons as svg for hover-effect

--- a/css/projects.css
+++ b/css/projects.css
@@ -232,18 +232,17 @@ p { font-family: Archia Light; }
 }
 
 /*ICONS*/
-.footer a img {
-  height: 40px;
+.footer a svg {
   margin: 30px 0px 20px 0px;
-  padding-right: 8px;
-  transform: rotate();
 }
 
- #icon1:hover, #icon2:hover, #icon3:hover {
-  /*height: 45px;*/
-  transition: all ease-in-out .5s;
-  transform: rotate(360deg);
+ a svg:hover .instagram,
+ a svg:hover .github,
+ a svg:hover .behance { 
+  fill: #3D00B2;
+  transition: all .2s ease-in-out;
 }
+
 
 /* LABEL SWITCH FOOTER */
 .item1 .new-label span, .item2 .new-label span, .item3 .new-label span {
