--- a/css/cv.css
+++ b/css/cv.css
@@ -90,47 +90,52 @@ h3 {
   height: 145px;
   float: left;
   margin: 0px 20px 50px 0px;
+  border: 5px solid #FADD02;
+  position: relative;
+  transition: all 0.75s ease-in-out 0s;
 }
 
   /* BORDER-TRANSITION FOR THE BOX */
-.button::after, .button::before {
-  /*content: "";*/
-  height: 100%;
-  width: 100%;
-  /*left: -5px;*/
-  position: absolute;
-  /*top: -5px;*/
-  transform: scale(0);
-  transition: all 0.5s ease-in-out 0s;
-  z-index: 3;
-}
+  .button::after, .button::before {
+    content: "";
+    height: calc(100% + 5px);
+    width: calc(100% + 5px);;
+    left: -5px;
+    position: absolute;
+    top: -5px;
+    transform: scale(0);
+    transition: all 0.5s ease-in-out 0s;
+    z-index: 3;
+  }
+  
+  .button::before {
+    border-bottom: 5px solid white;
+    border-left: 5px solid white;
+    transform-origin: 0 100% 0;
+  }
+  
+  .button::after {
+    border-right: 5px solid white;
+    border-top: 5px solid white;
+    transform-origin: 100% 0 0;
+  }
+  
+  .button:hover::after, .button:hover::before {
+    transform: scale(1);
+  }
+  .button:hover {
+    border: 5px solid rgba(0, 160, 80, 0);
+  }
 
-.button a {
-  z-index: 4;
-}
-
-.button::before {
-  border-bottom: 5px solid white;
-  border-left: 5px solid white;
-  /*transform-origin: 0 100% 0;*/
-}
-
-.button::after {
-  border-right: 5px solid white;
-  border-top: 5px solid white;
-  /*transform-origin: 100% 0 0;*/
-}
-
-.button:hover::after, .button:hover::before {
-  transform: scale(1);
-}
-.button:hover {
-  border: 5px solid rgba(0, 160, 80, 0);
-}
+  .button:hover p {
+    color: #FADD02;
+  }
 /*---*/
 
 .button p {
   font-size: 30pt;
+  transition: all 0.75s ease-in-out 0s;
+
 }
 
 .footnote {
